--- a/AlamClock/AlamClock/Properties/Resources.resx
+++ b/AlamClock/AlamClock/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="alarmLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\alarmLogo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="backgroundForm101" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\backgroundForm101.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="BadToTheBone" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bad to the bone lyrics.wmv.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
